出走是觉醒或逃避